Updated from Publii

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1486,9 +1486,9 @@ textarea {
   transition: all 0.12s linear;
   width: 1rem;
 }
-.content__footer {
+/*.content__footer {
   margin-top: calc(var(--magic-number) / 2);
-}
+}*/
 .content__related {
   margin-top: var(--magic-number);
 }
@@ -2012,13 +2012,13 @@ textarea {
   border-top: 1px solid var(--light);
   color: var(--gray-1);
   font-size: 0.7901234568rem;
-  margin-top: var(--magic-number);
+  /*margin-top: var(--magic-number);
   margin-bottom: calc(var(--magic-number) / 2);
-  padding-top: calc(var(--magic-number) / 3);
+  padding-top: calc(var(--magic-number) / 3);*/
 }
 @media all and (max-width: 56.1875em) {
   .footer {
-    padding-top: calc(var(--magic-number) / 2);
+    /*padding-top: calc(var(--magic-number) / 2);*/
     text-align: center;
   }
 }
@@ -2029,7 +2029,7 @@ textarea {
   }
 }
 .footer h3 {
-  margin: 0 0 calc(var(--baseline) * 5);
+  /*margin: 0 0 calc(var(--baseline) * 5);*/
 }
 .footer__copy {
   font-size: 0.7901234568rem;
